windows compatibility was added